--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -26,7 +26,7 @@
 
 		<div class="col-md-12">
 				<h2>PORTFOLIO | Under Construction</h2>
-				<p>While many of my engineering-related endeavors are proprietary information, here is a sampling of some fun projects I have worked on to give you an idea of my skills.</p>
+				<p>While many of my engineering-related endeavors are proprietary information, here is a sampling of some fun projects I have worked on to give you an idea of my skills and interests.</p>
 		</div>
 
 
@@ -53,7 +53,7 @@
 					<a href="https://www.microstrategy.com/Strategy/media/downloads/white-papers/The-Platform-Approach-to-Mobile-Apps.pdf">iBooks Author</a>
 				</h3>
 
-				<p>I fell in love with iBooks Author professionally, and then personally. I wrote the first edition of this masterpiece--feel free to check it out.</p>
+				<p>As my first task as a Product Manager, I was told to partner with the Education department to create an informative yet approachable piece of marketing--and so began my romance with iBooks Author.</p>
 			</div>
 			
 
@@ -66,7 +66,7 @@
 					<a href="https://www.youtube.com/watch?v=h7AK7-fanTo&list=PLC42A172FFEC88D1E&index=49">Video Editing</a>
 				</h3>
 
-				<p>That moment when your product hits it big and there aren't enough video people to go around...and so the Final Cut Pro, Screenflow, Motion, and Compressor adventure began!</p>
+				<p>That awesome moment when your product hits it big and there aren't enough video people to go around...and so the Final Cut Pro, Screenflow, Motion, and Compressor adventure began!</p>
 			</div>
 
 			
@@ -85,7 +85,7 @@
 					<a href="https://www.youtube.com/watch?v=oB75RtI9lU4">Voiceovers</a>
 				</h3>
 
-				<p>What I lack in voice training, I try to make up for with boundless enthusiasm. Feel free to listen here or just shoot me an email and we can set up a call.</p>
+				<p>What I lack in voice training, I try to make up for with boundless enthusiasm. Feel free to listen to some of my mobile application walkthroughs on YouTube or just shoot me an email and we can chat.</p>
 			</div>
 			
 			<div class="col-md-4 portfolio-pic">
@@ -97,7 +97,7 @@
 					<a href="https://www.youtube.com/watch?v=l0N91j_KZiI&list=PLC42A172FFEC88D1E&index=3">Drawing</a>
 				</h3>
 
-				<p>So at one point I worked with this amazing guy named Jorge. He took some terrible freehand drawings of mine and turned them into the supporting characters in an amazing video. </p>
+				<p>So at one point I worked with this amazing guy named Jorge. He took some terrible freehand drawings of mine and turned them into the supporting characters in an amazing video. So cool!</p>
 			</div>
 			
 			<div class="col-md-4 portfolio-pic">
@@ -109,7 +109,7 @@
 					<a href="#">Undergraduate Thesis</a>
 				</h3>
 
-				<p>While I wrote this years ago, it is still one of my greatest achievements to date. Though I must warn you that some people say it is sleep-inducing.</p>
+				<p>While I wrote this years ago, it is still one of my greatest achievements to date. Though I must warn you that some people say it is sleep-inducing. So, feel free to read on if you are literary-minded or suffering from insomnia ;).</p>
 			</div>
 
 		</div>
@@ -122,7 +122,7 @@
 				</a>
 				
 				<h3>
-					<a href="#">Under Construction"</a>
+					<a href="#">Under Construction</a>
 				</h3>
 
 				<p>Hmmm...I will definitely need to come back to this. We haven't even gotten to the good parts!</p>
