--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 	<div class="container">
 
 		<p><h3>Erin graduated magna cum laude from Cornell University in 2011 with a double major in English and Spanish. She promptly surprised everyone she knew--and particularly herself--by accepting a job in an engineering capacity at MicroStrategy. Since then, her interests have grown in a more technical direction, but her penchant for spontaneous international travel, long walks in DC, and warm chocolate croissants remains unchanged.</h3></p>
+
+		<p><h3>This website, in addition to serving as my introduction, is also my personal HTML+CSS playground. Please don't take any bugs personally as this is most definitely a work in progress.</h3></p>
+
 	</div>
 
 </body>
