--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -109,7 +109,7 @@
 					<a href="#">Undergraduate Thesis</a>
 				</h3>
 
-				<p>While I wrote this years ago, it is still one of my greatest achievements to date. Though I must warn you that some people say it is sleep-inducing. So, feel free to read on if you are literary-minded or suffering from insomnia ;).</p>
+				<p>While I wrote this years ago, it is still one of my greatest achievements to date--though some say it is sleep-inducing. So, feel free to read on if you are literary-minded or suffering from insomnia ;).</p>
 			</div>
 
 		</div>
