--- a/pages/school.html
+++ b/pages/school.html
@@ -30,8 +30,8 @@
 				<img src="../images/cornell.png">
 			</div>
 
-			<div class="text">
-				<h3><b>Cornell University</b></h3>
+			<div class="schoolText">
+				<h4><b>Cornell University</b></h4>
 					<p>Magna Cum Laude | 3.75</p>
 					<p>Completed an honors thesis for the English department; Awarded Alpha Phi Omega's Service Award for most hours of community service completed</p>
 			</div>
@@ -42,8 +42,8 @@
 				<img src="../images/UPF.jpeg">
 			</div>
 
-			<div class="text">
-				<h3><b>Study Abroad</b></h3>
+			<div class="schoolText">
+				<h4><b>Study Abroad</b></h4>
 					<p>Universitat Pompeu Fabra | 9.5/10</p>
 					<p>Pontificia Universidad Catolica del Peru | 19/20</p>
 					<p>Oxford University | A</p>
@@ -55,8 +55,8 @@
 				<img src="../images/HHS.GIF">
 			</div>
 
-			<div class="text">
-				<h3><b>Healdsburg High School</b></h3>
+			<div class="schoolText">
+				<h4><b>Healdsburg High School</b></h4>
 					<p>Graduated first in class | 4.21</p>
 					<p>Nominated All League First Team in Basketball, Honorable Mention in Volleyball, and Best in Show at the Healdsburg Science Fair</p>
 			</div>
