--- a/pages/school.html
+++ b/pages/school.html
@@ -25,6 +25,8 @@
 
 	<div class="container">
 
+		<h2>SCHOOL</h2>
+
 		<div class="col-md-4">
 			<div class="imgcenter">
 				<img src="../images/cornell.png">
@@ -32,8 +34,8 @@
 
 			<div class="schoolText">
 				<h4><b>Cornell University</b></h4>
-					<p>Magna Cum Laude | 3.75</p>
-					<p>Completed an honors thesis for the English department; Awarded Alpha Phi Omega's Service Award for most hours of community service completed</p>
+					<h5>Magna Cum Laude | 3.75</h5>
+					<h5>Completed an honors thesis for the English department; Awarded Alpha Phi Omega's Service Award for most hours of community service completed</h5>
 			</div>
 		</div>
 
@@ -44,9 +46,9 @@
 
 			<div class="schoolText">
 				<h4><b>Study Abroad</b></h4>
-					<p>Universitat Pompeu Fabra | 9.5/10</p>
-					<p>Pontificia Universidad Catolica del Peru | 19/20</p>
-					<p>Oxford University | A</p>
+					<h5>Universitat Pompeu Fabra | 9.5/10</h5>
+					<h5>Pontificia Universidad Catolica del Peru | 19/20</h5>
+					<h5>Oxford University | A</h5>
 			</div>			
 		</div>
 
@@ -57,8 +59,8 @@
 
 			<div class="schoolText">
 				<h4><b>Healdsburg High School</b></h4>
-					<p>Graduated first in class | 4.21</p>
-					<p>Nominated All League First Team in Basketball, Honorable Mention in Volleyball, and Best in Show at the Healdsburg Science Fair</p>
+					<h5>Graduated first in class | 4.21</h5>
+					<h5>Nominated All League First Team in Basketball, Honorable Mention in Volleyball, and Best in Show at the Healdsburg Science Fair</h5>
 			</div>
 		</div>
 		
