add valedictorian stuff

--- a/pages/school.html
+++ b/pages/school.html
@@ -60,6 +60,7 @@
 			<div class="schoolText">
 				<h4><b>Healdsburg High School</b></h4>
 					<h5>Graduated first in class | 4.21</h5>
+					<h5>Delivered Valedictorian speech at commencement</h5>
 					<h5>Nominated All League First Team in Basketball, Honorable Mention in Volleyball, and Best in Show at the Healdsburg Science Fair</h5>
 			</div>
 		</div>
