--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -21,6 +21,11 @@
 		</div>
 	</div>
 
+<script type="text/javascript">
+	
+
+
+</script>
 
 	<div class="container">
 
@@ -34,15 +39,33 @@
 
 			<div class="col-md-4 portfolio-pic">
 				<a href="#">
-					<img class="img-responsive" src="../images/MSTRDashboard.png">
+					<img class="img-responsive" src="../images/MSTRDashboard.png" data-toggle="modal" data-target="#mstrModal">
 				</a>
 				
 				<h3>
-					<a href="#">MicroStrategy Analytics</a>
+					<a href="#" data-toggle="modal" data-target="#mstrModal">MicroStrategy Analytics</a>
 				</h3>
 
 				<p>Over the last 4 years, I have used MicroStrategy for any number of customer use cases; however, this dashboard was personal. I need to start planning next year's vacations around the DC cherry blossoms.</p>
 			</div>
+
+<div class="modal fade" id="mstrModal" role="dialog">
+	<div class="modal-dialog modal-lg">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal">&times;</button>
+				<h4 class="modal-title">Modal Header</h4>
+			</div>
+			<div class="modal-body">
+				<p>This is a large modal</p>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">&times;</button>
+			</div>
+		</div>
+	</div>
+</div>
+
 
 			<div class="col-md-4 portfolio-pic">
 				<a href="https://www.microstrategy.com/Strategy/media/downloads/white-papers/The-Platform-Approach-to-Mobile-Apps.pdf">
@@ -68,9 +91,6 @@
 
 				<p>That awesome moment when your product hits it big and there aren't enough video people to go around...and so the Final Cut Pro, Screenflow, Motion, and Compressor adventure began!</p>
 			</div>
-
-			
-
 			
 		</div>
 
