--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -3,6 +3,7 @@
 	<head>
 
 		<title>Erin Kate Carlson</title>
+		<script src="../css/jquery-1.11.3.min.js"></script>
 		<link href="../css/bootstrap.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/stylesheet.css" rel="stylesheet" type="text/css"/>
 		<link rel="icon" type="image/png" href="../favicon-32x32.png" sizes="32x32"/>
