--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -133,25 +133,52 @@
 		</div>
 
 		<!-- Trigger the modal with a button -->
-<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
+
+
 
 <!-- Modal -->
-<div id="myModal" class="modal fade" role="dialog">
+<div id="mstrModal" class="modal fade" role="dialog">
   <div class="modal-dialog">
 
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Modal Header</h4>
+        <h4 class="modal-title">MicroStrategy Dashboards</h4>
       </div>
       <div class="modal-body">
-        <p>Some text in the modal.</p>
+        <p>The few short days that the Cherry Blossoms will finally bloom is the perennial DC enigma--that, and government conspiracies, I suppose. This year I chose to take a methodical approach to predicting the exact day so that I could plan my vacations accordingly.</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div>
+
+  </div>
+</div>
+
+
+
+
+		<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Test Modal</button>
+
+			<!-- Modal -->
+			<div id="myModal" class="modal fade" role="dialog">
+ 			<div class="modal-dialog">
+
+    		<!-- Modal content-->
+    		<div class="modal-content">
+     			<div class="modal-header">
+       				<button type="button" class="close" data-dismiss="modal">&times;</button>
+        				<h4 class="modal-title">Modal Header</h4>
+      			</div>
+      		<div class="modal-body">
+        		<p>Some text in the modal.</p>
+     		</div>
+      		<div class="modal-footer">
+        		<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      		</div>
+    	</div>
 
   </div>
 </div>
