--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -138,7 +138,7 @@
 
 <!-- Modal -->
 <div id="mstrModal" class="modal fade" role="dialog">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-lg">
 
     <!-- Modal content-->
     <div class="modal-content">
@@ -148,6 +148,17 @@
       </div>
       <div class="modal-body">
         <p>The few short days that the Cherry Blossoms will finally bloom is the perennial DC enigma--that, and government conspiracies, I suppose. This year I chose to take a methodical approach to predicting the exact day so that I could plan my vacations accordingly.</p>
+        <p>EARLY BLOOMERS | While the exact day that the Cherry Blossoms bloom varies widely, it appears that the DC Cherry Blossoms have been blooming around 5 days earlier than when they were planted in 1921. Or so the liberal media has been claiming. Is there any evidence to back up these claims? Let's start with their dataset.</p>
+        	<img src="../images/daysin.png">
+        <p>DRAMATIC DECADES | When you look at the decade-level averages, the change appears even more pronounced--perhaps the media got it right. Perhaps it is time to investigate whether this is due to the increased maturity of trees, lack of data for the 2010s, environmental factors, or something else?</p>
+        	<img src="../images/decades.png">
+        <p>HYPOTHESIS 1: INCOMPLETE DATA | I obtained the cherry blossom data for 2013-2015 which normalized the data somewhat. It appears that the cherry blossoms are blooming a day or two earlier than the average. Was the lack of data the only factor?</p>
+        	<img src="../images/hypothesis1.png">
+        <p>HYPOTHESIS 2: ENVIRONMENTAL FACTORS | When plotting the number of severe weather incidents from the first of January to the day of peak bloom, there appears to be no correlation.</p>
+        	<img src="../images/hypothesis2.png">
+        <p>THE MILLION DOLLAR QUESTION | So, when will the cherry blossoms bloom in 2016?</p>
+        	<img src="../images/prediction.png">
+        <p>My Data-Driven Prediction: <b>April 4, 2016</b></p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
