--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -48,8 +48,36 @@
 
 
 
+			<div class="col-md-4 portfolio-pic">
+				<a href="">
+					<img class="img-responsive" src="">
+				</a>
+				
+				<h3>
+					<a data-toggle="modal" data-target="#mstrModal">Agile User Stories</a>
+				</h3>
+
+				<p>As many of you know, a Product Owner knows only one sentence syntax: "As a USER PERSONA, I want to do THIS so that I can more productive and effective at my job. Here's a sample user story for you to peruse.</p>
+			</div>
+			
 
 			<div class="col-md-4 portfolio-pic">
+				<a href="https://www.youtube.com/watch?v=h7AK7-fanTo&list=PLC42A172FFEC88D1E&index=49">
+					<img class="img-responsive" src="../images/videoediting.png">
+				</a>
+				
+				<h3>
+					<a data-toggle="modal" data-target="#mstrModal">Formulating a Product Roadmap</a>
+				</h3>
+
+				<p>Crafting a product roadmap begins with high-level themes and initiatives that are gradually broken down into delivery-team accessible features for implementation. Here's an example of how I use Rally every day.</p>
+			</div>
+			
+		</div>
+
+		<div class="row">
+			
+		<div class="col-md-4 portfolio-pic">
 				<a href="https://www.microstrategy.com/Strategy/media/downloads/white-papers/The-Platform-Approach-to-Mobile-Apps.pdf">
 					<img class="img-responsive" src="../images/ibook.png">
 				</a>
@@ -73,11 +101,7 @@
 
 				<p>That awesome moment when your product hits it big and there aren't enough video people to go around...and so the Final Cut Pro, Screenflow, Motion, and Compressor adventure began!</p>
 			</div>
-			
-		</div>
 
-		<div class="row">
-			
 			<div class="col-md-4 portfolio-pic">
 				<a href="https://www.youtube.com/watch?v=oB75RtI9lU4">
 					<img class="img-responsive" src="../images/voiceover.png">
@@ -90,7 +114,13 @@
 				<p>What I lack in voice training, I try to make up for with boundless enthusiasm. Feel free to listen to some of my mobile application walkthroughs on YouTube or just shoot me an email and we can chat.</p>
 			</div>
 			
-			<div class="col-md-4 portfolio-pic">
+			
+
+		</div>
+
+		<div class="row">
+
+		<div class="col-md-4 portfolio-pic">
 				<a href="https://www.youtube.com/watch?v=l0N91j_KZiI&list=PLC42A172FFEC88D1E&index=3">
 					<img class="img-responsive" src="../images/drawing.png">
 				</a>
@@ -113,10 +143,6 @@
 
 				<p>While I wrote this years ago, it is still one of my greatest achievements to date--though some say it is sleep-inducing. So, feel free to read on if you are literary-minded or suffering from insomnia ;).</p>
 			</div>
-
-		</div>
-
-		<div class="row">
 
 			<div class="col-md-4 portfolio-pic">
 				<a href="#">
@@ -169,30 +195,6 @@
 </div>
 
 
-
-
-		<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Test Modal</button>
-
-			<!-- Modal -->
-			<div id="myModal" class="modal fade" role="dialog">
- 			<div class="modal-dialog">
-
-    		<!-- Modal content-->
-    		<div class="modal-content">
-     			<div class="modal-header">
-       				<button type="button" class="close" data-dismiss="modal">&times;</button>
-        				<h4 class="modal-title">Modal Header</h4>
-      			</div>
-      		<div class="modal-body">
-        		<p>Some text in the modal.</p>
-     		</div>
-      		<div class="modal-footer">
-        		<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      		</div>
-    	</div>
-
-  </div>
-</div>
 
 	</div>		
 
