--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -50,7 +50,7 @@
 
 			<div class="col-md-4 portfolio-pic">
 				<a href="">
-					<img class="img-responsive" src="">
+					<img class="img-responsive" src="../images/videoediting.png">
 				</a>
 				
 				<h3>
