--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -50,11 +50,11 @@
 
 			<div class="col-md-4 portfolio-pic">
 				<a href="">
-					<img class="img-responsive" src="../images/videoediting.png">
+					<img class="img-responsive" src="../images/agile.png">
 				</a>
 				
 				<h3>
-					<a data-toggle="modal" data-target="#mstrModal">Agile User Stories</a>
+					<a data-toggle="modal" data-target="#agileModal">Agile User Stories</a>
 				</h3>
 
 				<p>As many of you know, a Product Owner knows only one sentence syntax: "As a USER PERSONA, I want to do THIS so that I can more productive and effective at my job. Here's a sample user story for you to peruse.</p>
@@ -63,11 +63,11 @@
 
 			<div class="col-md-4 portfolio-pic">
 				<a href="https://www.youtube.com/watch?v=h7AK7-fanTo&list=PLC42A172FFEC88D1E&index=49">
-					<img class="img-responsive" src="../images/videoediting.png">
+					<img class="img-responsive" src="../images/roadmap.png">
 				</a>
 				
 				<h3>
-					<a data-toggle="modal" data-target="#mstrModal">Formulating a Product Roadmap</a>
+					<a data-toggle="modal" data-target="#roadmapModal">Formulating a Product Roadmap</a>
 				</h3>
 
 				<p>Crafting a product roadmap begins with high-level themes and initiatives that are gradually broken down into delivery-team accessible features for implementation. Here's an example of how I use Rally every day.</p>
@@ -129,7 +129,7 @@
 					<a href="https://www.youtube.com/watch?v=l0N91j_KZiI&list=PLC42A172FFEC88D1E&index=3">Drawing</a>
 				</h3>
 
-				<p>So at one point I worked with this amazing guy named Jorge. He took some terrible freehand drawings of mine and turned them into the supporting characters in an amazing video. So cool!</p>
+				<p>So at one point I worked with this uber-talented guy named Jorge. He took some terrible freehand drawings of mine and turned them into the supporting characters in an amazing video. So cool!</p>
 			</div>
 			
 			<div class="col-md-4 portfolio-pic">
@@ -194,7 +194,67 @@
   </div>
 </div>
 
+<!-- User Story Modal -->
+<div id="agileModal" class="modal fade" role="dialog">
+  <div class="modal-dialog modal-lg">
 
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Agile Methodologies</h4>
+      </div>
+      <div class="modal-body">
+        <h2>Feature</h2>
+        <p>As a BI administrator, I want to grant users access to enterprise data sources and other resources in a governed manner so that they can effectively interact with enterprise ecosystem—without incurring unintended and far-reaching consequences.</p>
+        <h3>DETAILS</h3>
+        <p>Every data analyst has been on the receiving end of a frantic email from the IT team after submitting a large, complex, and/or server-crushing query. It happens. We need to ensure that the appropriate governance is in place to limit this sort of interaction.
+
+        <p>In order to do this, the following steps will be necessary:
+        <ul>
+        	<li>Define a set of intelligent default governing settlngs for end users, with the possibility for administrator override</li>
+        	<li>Surface a variety of server governing controls to administrators</li>
+        	<li>Expose a set of query statistics and functionality so that business analyst can gauge the impact and performance of their queries</li>
+        	<li>Augment the alerting capabilities to ensure administrators are aware of long-running queries</li>
+        </ul>
+        </p>
+      <h3>USER STORY</h3>
+      <p>As an administrator, I want to define a set of query size limit controls so that my users are running better-performing queries that serves the double purpose of not stressing the underlying enterprise resources.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+
+<!-- Roadmap Modal -->
+<div id="roadmapModal" class="modal fade" role="dialog">
+  <div class="modal-dialog modal-lg">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Product Roadmap Planning</h4>
+      </div>
+      <div class="modal-body">
+        <h2>PORTFOLIO ITEM</h2>
+        <p>Governed Data Discovery | How to Ensure a Win-Win Outcome that IT Administrators, BI Users, and Business Analysts can Agree On</p>
+        <p>As a BI administrator, I want to know that I will be able to provide a best-in-class experience to my data analysts while balancing the needs of the IT department, so that the power of data discovery is balanced by system- and IT-defined governance.</p>
+        <h3>DETAILS</h3>
+        <p>The proliferation of desktop data analysis tools connecting directly to enterprise resources frequently results in stressed or failing IT resources. Customers frequently cite scenarios where servers are brought down by adhoc queries made against at-capacity database servers as the most common problem. The ultimate result of these hardware failure scenarios is additional stress on system administrators who are expected to triage such situations, service disruptions for BI users using standard reports, and frustration with respect to performance on the business analyst side.</p>
+        <p><b>In order to support all of these user personas, we need to find ways to effectively and intelligently govern adhoc access to enterprise assets while still advocating for a powerful adhoc user experience.</b></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
 
 	</div>		
 
