--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -49,12 +49,12 @@
 
 
 			<div class="col-md-4 portfolio-pic">
-				<a href="">
-					<img class="img-responsive" src="../images/agile.png">
+				<a href="#">
+					<img class="img-responsive" src="../images/agile.png" data-toggle="modal" data-target="#agileModal">
 				</a>
 				
 				<h3>
-					<a data-toggle="modal" data-target="#agileModal">Agile User Stories</a>
+					<a data-toggle="modal" data-target="#agileModal">Agile Methodologies</a>
 				</h3>
 
 				<p>As many of you know, a Product Owner knows only one sentence syntax: "As a USER PERSONA, I want to do THIS so that I can more productive and effective at my job. Here's a sample user story for you to peruse.</p>
@@ -62,12 +62,12 @@
 			
 
 			<div class="col-md-4 portfolio-pic">
-				<a href="https://www.youtube.com/watch?v=h7AK7-fanTo&list=PLC42A172FFEC88D1E&index=49">
-					<img class="img-responsive" src="../images/roadmap.png">
+				<a href="#">
+					<img class="img-responsive" src="../images/roadmap.png" data-toggle="modal" data-target="#roadmapModal">
 				</a>
 				
 				<h3>
-					<a data-toggle="modal" data-target="#roadmapModal">Formulating a Product Roadmap</a>
+					<a data-toggle="modal" data-target="#roadmapModal">Product Roadmap Planning</a>
 				</h3>
 
 				<p>Crafting a product roadmap begins with high-level themes and initiatives that are gradually broken down into delivery-team accessible features for implementation. Here's an example of how I use Rally every day.</p>
