--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -205,7 +205,7 @@
         <h4 class="modal-title">Agile Methodologies</h4>
       </div>
       <div class="modal-body">
-        <h2>Feature</h2>
+        <h2>FEATURE</h2>
         <p>As a BI administrator, I want to grant users access to enterprise data sources and other resources in a governed manner so that they can effectively interact with enterprise ecosystem—without incurring unintended and far-reaching consequences.</p>
         <h3>DETAILS</h3>
         <p>Every data analyst has been on the receiving end of a frantic email from the IT team after submitting a large, complex, and/or server-crushing query. It happens. We need to ensure that the appropriate governance is in place to limit this sort of interaction.
