reorder the portfolio

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -17,9 +17,9 @@
 	<div class="navbar navbar-default">
 		<div class="container-fluid">
 			<p class="navbar-text"><a href="../index.html">Erin Carlson</a></p>
+			<p class="navbar-text">Portfolio</p>
 			<p class="navbar-text"><a href="work.html">Work</a></p>
 			<p class="navbar-text"><a href="school.html">School</a></p>
-			<p class="navbar-text">Portfolio</p>
 		</div>
 	</div>
 
@@ -27,7 +27,7 @@
 	<div class="container">
 
 		<div class="col-md-12">
-				<h2>PORTFOLIO | Under Construction</h2>
+				<h2>PORTFOLIO</h2>
 				<p>While many of my engineering-related endeavors are proprietary information, here is a sampling of some fun projects I have worked on to give you an idea of my skills and interests.</p>
 		</div>
 
