removed portfolio page and image

--- a/pages/school.html
+++ b/pages/school.html
@@ -15,7 +15,6 @@
 	<div class="navbar navbar-default">
 		<div class="container-fluid">
 			<p class="navbar-text"><a href="../index.html">Erin Carlson</a></p>
-			<p class="navbar-text"><a href="portfolio.html">Portfolio</a></p>
 			<p class="navbar-text"><a href="work.html">Work</a></p>
 			<p class="navbar-text">School</p>
 		</div>
@@ -33,7 +32,7 @@
 
 			<div class="schoolText">
 				<h4><b>Cornell University</b></h4>
-					<h5>Magna Cum Laude | 3.75</h5>
+					<h5>Magna Cum Laude | 3.8/4.0</h5>
 					<h5>Completed an honors thesis for the English department; Awarded Alpha Phi Omega's Service Award for most hours of community service completed</h5>
 			</div>
 		</div>
