--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 	<div class="navbar navbar-default">
 		<div class="container-fluid">
-			<p class="navbar-text">Erin Carlson</p>
-			<p class="navbar-text"><a href="pages/work.html">Work</a></p>
-			<p class="navbar-text"><a href="pages/school.html">School</a></p>
+			<p class="navbar-text">Portfolio</p>
+			<p class="navbar-text"><a href="pages/work.html">Resume</a></p>
+			<p class="navbar-text"><a href="pages/school.html">Education</a></p>
 		</div>
 	</div>
 
