--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -18,8 +18,8 @@
 		<div class="container-fluid">
 			<p class="navbar-text"><a href="../index.html">Erin Carlson</a></p>
 			<p class="navbar-text">Portfolio</p>
-			<p class="navbar-text"><a href="work.html">Work</a></p>
-			<p class="navbar-text"><a href="school.html">School</a></p>
+			<p class="navbar-text"><a href="work.html">Resume</a></p>
+			<p class="navbar-text"><a href="school.html">Education</a></p>
 		</div>
 	</div>
 
