--- a/pages/school.html
+++ b/pages/school.html
@@ -14,9 +14,9 @@
 
 	<div class="navbar navbar-default">
 		<div class="container-fluid">
-			<p class="navbar-text"><a href="../index.html">Erin Carlson</a></p>
-			<p class="navbar-text"><a href="work.html">Work</a></p>
-			<p class="navbar-text">School</p>
+			<p class="navbar-text"><a href="../index.html">Portfolio</a></p>
+			<p class="navbar-text"><a href="work.html">Resume</a></p>
+			<p class="navbar-text">Education</p>
 		</div>
 	</div>
 
