--- a/pages/work.html
+++ b/pages/work.html
@@ -15,9 +15,9 @@
 
 	<div class="navbar navbar-default">
 		<div class="container-fluid">
-			<p class="navbar-text"><a href="../index.html">Erin Carlson</a></p>
-			<p class="navbar-text">Work</p>
-			<p class="navbar-text"><a href="school.html">School</a></p>
+			<p class="navbar-text"><a href="../index.html">Portfolio</a></p>
+			<p class="navbar-text">Resume</p>
+			<p class="navbar-text"><a href="school.html">Education</a></p>
 		</div>
 	</div>
 
