--- a/pages/resume.html
+++ b/pages/resume.html
@@ -26,11 +26,7 @@
 </div>
 			
 	<div class="container">
-
-			<div class="col-md-2">
-			</div>
-
-			<div class="col-md-8">
+			<div class="col-md-4">
 
 				<h3><b>Director &amp Area Product Owner | Tools Product Group</b></h3>
 					<ul>
@@ -38,13 +34,28 @@
 						<li>Own the product vision and formulate supporting user stories, features, wireframes, and product specs</li>
 						<li>Collaborate daily with the CEO, CTO, and key stakeholders to define the product roadmap</li>
 						<li>Internal product evangelist and presenter at the annual MicroStrategy World conference</li>
+
 					</ul>
 
 			</div>
 
+			<div class="col-md-4">
 
+				<h3><b>Area Product Owner | Next-Generation Software</b></h3>
+					<ul>
+						<li>Managed six product engineering and design teams (30 total reports) during the company&#8217s transition to Agile/Scrum methodologies and Rally Software</li>
+						<li>Owned the product backlog, refined user stories, conducted iteration planning and other Scrum ceremonies</li>
+						<li>Member of the first-ever week-long Product Council event to elaborate the company vision with CXO stakeholders</li>
+					</ul>
+			</div>
 
-			<div class="col-md-2">
+			<div class="col-md-4">
+
+				<h3><b>Technical Liaison to the CEO &amp Beta Consultant</b></h3>
+					<ul>
+						<li>Facilitated 21 CEO-led initiatives involving the Technology, Product Management, Operations, and Product Marketing teams</li><li>Coached CEO on the current and next-generation MicroStrategy Analytics Platform, administrative tools, and Amazon Web Services products</li>
+						<li>Balanced the Beta Consultant customer-oriented, traveling role with mission-critical directives for executives</li>
+					</ul>
 			</div>
 	</div>
 
