--- a/pages/work.html
+++ b/pages/work.html
@@ -21,44 +21,39 @@
 		</div>
 	</div>
 
-<div class="oldWork">
-		<h2>MicroStrategy, Inc.</h2>
-</div>
-			
 	<div class="container">
 
-			<div class="col-md-2">
-			</div>
+		<div class="oldWork">
+			<h2>Director &amp Area Product Owner</h2>
+		</div>
+			
 
-			<div class="col-md-8">
-
-				<h3><b>Director &amp Area Product Owner | Tools Product Group</b></h3>
+			<div class="col-md-12">
+				<h3>Tools Product Engineering Group | MicroStrategy, Inc.</h3>
 					<ul>
-						<li>Lead innovation tiger team of engineers, architects, and UI/UX designers to first external release</li>
+						<li>Lead innovation tiger team of engineers, architects, and UI/UX designers to first external release of a next-generation analytics product</li>
 						<li>Own the product vision and formulate supporting user stories, features, wireframes, and product specs</li>
-						<li>Collaborate daily with the CEO, CTO, and key stakeholders to define the product roadmap</li>
+						<li>Collaborate daily with the CEO, CTO, and key stakeholders to define the product roadmap and iteration strategy</li>
 						<li>Internal product evangelist and presenter at the annual MicroStrategy World conference</li>
+						<li>Previous: Managed six product engineering and design teams (30 total reports) during the company&#39s transition to Agile/Scrum methodologies and Rally Software</li>
 					</ul>
-
-			</div>
-
-
-
-			<div class="col-md-2">
 			</div>
 	</div>
 
-
-<div class="oldWork">
-		<h2>Technology Associate</h2>
-</div>
 	<div class="container">
+
+			<div class="oldWork">
+				<h2>Technology Associate</h2>
+			</div>
+
 
 		<div class="col-md-7">
 			<img id="mainpic" src="../images/erincarlson_cropped.JPG">
 		</div>
 		
 		<div class="col-md-5">
+			<h3></h3>
+			<h3></h3>
 			<p>The Technology Associate role is a rotational program at MicroStrategy where individuals spend time in Technical Support, Quality Engineering, and, ultimately, Beta Consulting. The Associate Product Manager position was an unplanned but exciting detour midway through my Quality Engineering rotation.</p>
 
 			<h3><b>Beta Consultant</b> | Beta Software Team</h3>
@@ -73,13 +68,15 @@
 			<h3><b>Technical Support Engineer</b> | Client Experience</h3>
 				<p>Solved mission-critical customer issues via call and email in a fast-paced environment, frequently recognized as the team's top case taker.</p>
 		</div>
-</div>
+	</div>
 
-<div class="oldWork">
-		<h2>Back in the Day</h2>
-</div>
+	<div class="container">
 
-		<div class="container">
+		<div class="oldWork">
+			<h2>Back in the Day</h2>
+		</div>
+
+		
 
 			<p>While these jobs may no longer be strictly relevant to my day-to-day life, I wouldn't be the same person without the knowledge and skills gained over these years.</p>
 			
