change file names

--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
 	<div class="navbar navbar-default">
 		<div class="container-fluid">
 			<p class="navbar-text">Portfolio</p>
-			<p class="navbar-text"><a href="pages/work.html">Resume</a></p>
-			<p class="navbar-text"><a href="pages/school.html">Education</a></p>
+			<p class="navbar-text"><a href="pages/resume.html">Resume</a></p>
+			<p class="navbar-text"><a href="pages/education.html">Education</a></p>
 		</div>
 	</div>
 
 
 	<div class="container">
+
+		<div class="oldWork">
+			<h2>PORTFOLIO | Erin Carlson</h2>
+		</div>
 
 		<p><h3>Erin graduated magna cum laude from Cornell University in 2011 with a double major in English and Spanish. She promptly surprised everyone she knew--and particularly herself--by accepting a job in an engineering capacity at MicroStrategy. Since then, her interests have grown in a more technical direction, but her penchant for spontaneous international travel, long walks in DC, and warm chocolate croissants remains unchanged.</h3></p>
 
