--- a/pages/work.html
+++ b/pages/work.html
@@ -17,14 +17,14 @@
 		<div class="container-fluid">
 			<p class="navbar-text"><a href="../index.html">Portfolio</a></p>
 			<p class="navbar-text">Resume</p>
-			<p class="navbar-text"><a href="school.html">Education</a></p>
+			<p class="navbar-text"><a href="education.html">Education</a></p>
 		</div>
 	</div>
 
 	<div class="container">
 
 		<div class="oldWork">
-			<h2>Director &amp Area Product Owner</h2>
+			<h2>DIRECTOR &amp AREA PRODUCT OWNER</h2>
 		</div>
 			
 
@@ -43,7 +43,7 @@
 	<div class="container">
 
 			<div class="oldWork">
-				<h2>Technology Associate</h2>
+				<h2>TECHNOLOGY ASSOCIATE</h2>
 			</div>
 
 
@@ -73,7 +73,7 @@
 	<div class="container">
 
 		<div class="oldWork">
-			<h2>Back in the Day</h2>
+			<h2>BACK IN THE DAY</h2>
 		</div>
 
 		
