--- a/pages/resume.html
+++ b/pages/resume.html
@@ -17,59 +17,45 @@
 		<div class="container-fluid">
 			<p class="navbar-text"><a href="../index.html">Portfolio</a></p>
 			<p class="navbar-text">Resume</p>
-			<p class="navbar-text"><a href="school.html">Education</a></p>
+			<p class="navbar-text"><a href="education.html">Education</a></p>
 		</div>
 	</div>
 
-<div class="oldWork">
-		<h2>MicroStrategy, Inc.</h2>
-</div>
-			
 	<div class="container">
-			<div class="col-md-4">
 
-				<h3><b>Director &amp Area Product Owner | Tools Product Group</b></h3>
+		<div class="oldWork">
+			<h2>DIRECTOR & AREA PRODUCT OWNER</h2>
+		</div>
+			
+	
+			<div class="col-md-12">
+
+				<h3><b>Tools Product Engineering Group | MicroStrategy, Inc.</b></h3>
 					<ul>
 						<li>Lead innovation tiger team of engineers, architects, and UI/UX designers to first external release</li>
 						<li>Own the product vision and formulate supporting user stories, features, wireframes, and product specs</li>
 						<li>Collaborate daily with the CEO, CTO, and key stakeholders to define the product roadmap</li>
 						<li>Internal product evangelist and presenter at the annual MicroStrategy World conference</li>
+						<li>Previous: Managed six product engineering and design teams (30 total reports) during the company’s transition to Agile/Scrum methodologies and Rally Software</li>
 
 					</ul>
 
-			</div>
-
-			<div class="col-md-4">
-
-				<h3><b>Area Product Owner | Next-Generation Software</b></h3>
-					<ul>
-						<li>Managed six product engineering and design teams (30 total reports) during the company&#8217s transition to Agile/Scrum methodologies and Rally Software</li>
-						<li>Owned the product backlog, refined user stories, conducted iteration planning and other Scrum ceremonies</li>
-						<li>Member of the first-ever week-long Product Council event to elaborate the company vision with CXO stakeholders</li>
-					</ul>
-			</div>
-
-			<div class="col-md-4">
-
-				<h3><b>Technical Liaison to the CEO &amp Beta Consultant</b></h3>
-					<ul>
-						<li>Facilitated 21 CEO-led initiatives involving the Technology, Product Management, Operations, and Product Marketing teams</li><li>Coached CEO on the current and next-generation MicroStrategy Analytics Platform, administrative tools, and Amazon Web Services products</li>
-						<li>Balanced the Beta Consultant customer-oriented, traveling role with mission-critical directives for executives</li>
-					</ul>
 			</div>
 	</div>
 
-
-<div class="oldWork">
-		<h2>Technology Associate</h2>
-</div>
-	<div class="container">
+<div class="container">
+	<div class="oldWork">
+		<h2>TECHNOLOGY ASSOCIATE</h2>
+	</div>
+	
 
 		<div class="col-md-7">
 			<img id="mainpic" src="../images/erincarlson_cropped.JPG">
 		</div>
 		
 		<div class="col-md-5">
+			<h3></h3>
+			<h3></h3>
 			<p>The Technology Associate role is a rotational program at MicroStrategy where individuals spend time in Technical Support, Quality Engineering, and, ultimately, Beta Consulting. The Associate Product Manager position was an unplanned but exciting detour midway through my Quality Engineering rotation.</p>
 
 			<h3><b>Beta Consultant</b> | Beta Software Team</h3>
@@ -86,11 +72,11 @@
 		</div>
 </div>
 
-<div class="oldWork">
-		<h2>Back in the Day</h2>
-</div>
+	<div class="container">
 
-		<div class="container">
+		<div class="oldWork">
+			<h2>BACK IN THE DAY</h2>
+		</div>
 
 			<p>While these jobs may no longer be strictly relevant to my day-to-day life, I wouldn't be the same person without the knowledge and skills gained over these years.</p>
 			
