--- a/pages/education.html
+++ b/pages/education.html
@@ -15,7 +15,7 @@
 	<div class="navbar navbar-default">
 		<div class="container-fluid">
 			<p class="navbar-text"><a href="../index.html">Portfolio</a></p>
-			<p class="navbar-text"><a href="work.html">Resume</a></p>
+			<p class="navbar-text"><a href="resume.html">Resume</a></p>
 			<p class="navbar-text">Education</p>
 		</div>
 	</div>
@@ -23,7 +23,7 @@
 
 	<div class="container">
 
-		<h2>SCHOOL</h2>
+		<h2>EDUCATION</h2>
 
 		<div class="col-md-4">
 			<div class="imgcenter">
