--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 					<a href="https://www.youtube.com/watch?v=l0N91j_KZiI&list=PLC42A172FFEC88D1E&index=3">Drawing</a>
 				</h3>
 
-				<p>So at one point I worked with this uber-talented guy named Jorge. He took some terrible freehand drawings of mine and turned them into the supporting characters in an amazing video. So cool!</p>
+				<p>So at one point I worked with this uber-talented guy named <a href="http://www.whitemanemedia.com/">Jorge</a>. He took some terrible freehand drawings of mine and turned them into the supporting characters in an amazing video. So cool!</p>
 			</div>
 			
 			<div class="col-md-4 portfolio-pic">
