third person in bio

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 		<p><h3>Erin graduated <i>magna cum laude</i> from Cornell University in 2011 with a double major in English and Spanish. She promptly surprised everyone she knew--and particularly herself--by accepting a job in an engineering capacity at MicroStrategy. Since then, her interests have grown in a more technical direction, but her penchant for spontaneous international travel, long walks in DC, and warm chocolate croissants remains unchanged.</h3></p>
 
-		<p><h3>While many of my engineering-related endeavors are proprietary information, here is a sampling of my personal and professional projects:</h3></p>
+		<p><h3>While many of her engineering-related endeavors are proprietary information, here is a sampling of a few personal and professional projects:</h3></p>
 
 		<div class="col-md-12">
 
