change case on jpg

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 			<div class="col-md-4 portfolio-pic">
 				<a href="#">
-					<img class="img-responsive" src="images/UserResearchWireframing.JPG" data-toggle="modal" data-target="#wireframeModal">
+					<img class="img-responsive" src="images/UserResearchWireframing.jpg" data-toggle="modal" data-target="#wireframeModal">
 				</a>
 				
 				<h3>
