added rows back into column view

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
 
 				<p>As many of you know, a Product Owner knows only one sentence syntax: "As a USER PERSONA, I want to do THIS so that I can more productive and effective at my job. Here's a sample user story for you to peruse.</p>	
 			</div>
+		</div>
+
+		<div class="row">
 
 			<div class="col-md-4 portfolio-pic">
 				<a href="#">
@@ -110,6 +113,9 @@
 				<p>Good design is a complicated tradeoff between good principles and real-world complexity. While I may not be a designer, I have long used interface design as a tool for concept validation and communication with stakeholders. </p>
 			</div>
 
+		</div>
+
+		<div class="row">
 
 			<div class="col-md-4 portfolio-pic">
 				<a href="#">
@@ -149,7 +155,9 @@
 				<p>There came a serendipitous moment our Mobile product hit it big and there weren't enough video people to go around...and so the Final Cut Pro, Screenflow, Motion, and Compressor adventure began!</p>
 			</div>
 
-			
+		</div>
+
+		<div class="row">
 
 			<div class="col-md-4 portfolio-pic">
 				<a href="https://www.youtube.com/watch?v=oB75RtI9lU4">
@@ -180,11 +188,11 @@
 		
 		</div>
 
-		<!-- Trigger the modal with a button -->
+		
 
 
 
-<!-- Modal -->
+<!-- mstrModal -->
 <div id="mstrModal" class="modal fade" role="dialog">
   <div class="modal-dialog modal-lg">
 
