change textual description of wire framing

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					<a data-toggle="modal" data-target="#wireframeModal">User Research &amp Wireframing</a>
 				</h3>
 
-				<p>The core power (and difficulty) of analytics is telling the right story. The only way to build a tool that meets the requirements of a user is to fully research the user's thought process and use cases.</p>
+				<p>The core power (and difficulty) of analytics is telling the right story. The only way to build a tool that meets the requirements of a user is to fully research the user's thought process and use cases, and synergize them with the vision and current product.</p>
 			</div>
 
 
