change text and fix content strategy pic

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					<a data-toggle="modal" data-target="#wireframeModal">User Research &amp Wireframing</a>
 				</h3>
 
-				<p>The core power (and difficulty) of analytics is telling the right story. The only way to build a tool that meets the requirements of a user is to fully research the user's thought process and use cases, and synergize them with the vision and current product.</p>
+				<p>The core power (and difficulty) of analytics is telling the right story. The only way to build a tool that meets the requirements of a user is to fully research the user's thought process and use cases, and synergize them with the vision and product.</p>
 			</div>
 
 
@@ -392,7 +392,7 @@
 		<h2>STEP 2: Extensive Website Rework</h2>
         <p>Once the core messaging was solidified, we examined the information architecture and messaging on the <a href="http://swipixapp.com">Swipix website</a>. My particular focus was further down the page to provide a feature breakdown for potential customers, to ensure that the more complicated technical aspects were short, punchy, and true-to-life. We adjusted the order of the elements on the page to better reflect the user's experience as they move through the application, as well as rewriting the customer descriptions.</p>
 
-		<img class="img-responsive" src="../images/ContentStrategyWebsite.jpg">
+		<img class="img-responsive" src="../images/ContentStrategyWebsite.png">
 
 		<h2>STEP 3: Pursue Partnerships and Get the Word Out</h2>
         <p>While my friend executed a last-minute Facebook media campaign, I began formulating messages to send out to players in the technology, photography, and Apple communities. This meant a variety of press releases carefully tailored to each audience. Since the application had a native integration for ordering pictures to be printed at Walgreens, they kindly surfaced our press release on their <a href="https://developer.walgreens.com/blog/photoprints/swipix">Walgreens Developer Blog</a>. </p>
