iTunes listing open in new tab test

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
       </div>
       <div class="modal-body">
         <h2>STEP 1: Brainstorm Value Proposition and Customer Profiles</h2>
-        <p>My buddy Habanero Bytes is a really smart guy and the Swipix application is solid, so it was a no-brainer to say yes when he asked for help with his product marketing and messaging several days prior to the first release. We quickly worked through the unique advantages of the app, photo application pain points, and an analysis of the possible audiences to craft the core messaging for the <a href="https://itunes.apple.com/app/apple-store/id909669531?mt=8">App Store listing</a>.</p>
+        <p>My buddy Habanero Bytes is a really smart guy and the Swipix application is solid, so it was a no-brainer to say yes when he asked for help with his product marketing and messaging several days prior to the first release. We quickly worked through the unique advantages of the app, photo application pain points, and an analysis of the possible audiences to craft the core messaging for the <a href="https://itunes.apple.com/app/apple-store/id909669531?mt=8" target="_blank">App Store listing</a>.</p>
 
         <img class="img-responsive" src="../images/SwipixAppStore.png">
 		
